# tools-77

./: .gitignore  test.txt
.vercel/: project.json
frontend/: .env.example  .gitignore  VERCEL_DEPLOYMENT_GUIDE.md  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/.trae/documents/: product_requirements.md  technical_architecture.md
frontend/.vercel/: project.json
frontend/src/: App.tsx
frontend/src/components/: Footer.tsx  Hero.tsx  Navbar.tsx  PopularTools.tsx  ToolsPreview.tsx
frontend/src/data/: constants.ts
frontend/src/pages/: Home.tsx
frontend/src/types/: index.ts
services/pdf-doc/: .env.example  .env.txt  .gitignore  adobe_call.py  adobe_converter.py  adobe_layer_converter.py  advanced_text_filter.py  app.py  apt.txt  build.sh  builder1_filter.py  custom_filter_rules.py  custom_words.txt  document_manager.py  download_nanumgothic.py  file_utils.py  final_server.py  font_checker.py  google_drive_auth.py  layout_aware_converter.py  ocr_helper.py  pdf_converter_advanced.py  pip.conf  pre_check.py  pyproject.toml  qr_generator.py  requirements.txt  safe_cleanup.py  setup_ocr.py  simple_app.py  smart_converter.py  test_builder1_filter.py  test_conversion.py  test_enhanced_filter.py  test_filter_preview.py  test_tesseract.py  ultimate_image_converter.py  working_server.py
services/pdf-doc/templates/: Untitled-1.py  index.html  ocr_review.html  review_failed.html  settings.html
