[build-system]
requires = ["setuptools>=70.0.0", "wheel>=0.42.0", "pip>=24.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-doc-converter"
version = "1.0.0"
description = "PDF to DOCX converter service"
requires-python = ">=3.8,<3.14"
dependencies = [
    "Flask>=2.3.3",
    "Werkzeug>=2.3.7",
    "python-docx>=0.8.11",
    "reportlab>=4.0.4",
    "Pillow>=10.2.0",
    "gunicorn>=21.2.0",
    "python-dotenv>=1.0.0",
    "pdfservices-sdk>=4.2.0",
    "pdf2image>=1.16.3",
    "pytesseract>=0.3.10",
    "opencv-python-headless>=4.8.1.78",
    "numpy>=1.24.3",
    "qrcode>=7.4.2",
    "pdfplumber>=0.10.3",
    "python-pptx>=0.6.21",
    "PyPDF2>=3.0.1",
    "requests>=2.31.0",
    "pdf2docx>=0.5.6"
]

[tool.setuptools]
packages = ["app"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml", "*.json"]

[tool.wheel]
universal = false